# mlops_mnist

./: .gitignore  Makefile  README.md  pyproject.toml
.dvc/: config
data/: processed.dvc  raw.dvc
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_mnist_project/: __init__.py  eval_model.py  predict_model.py  train_model.py
mlops_mnist_project/data/: dataloader.py  make_dataset.py
mlops_mnist_project/models/: model.py
models/: model.pt
