[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_mnist_project"
version = "0.0.1"
description = "Project for MLOps course exercises"
authors = [
  { name = "augustsemrau", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.10.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops_mnist_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
